src/components/Header.css
.Header {
    position: fixed;
    top: 0px;
    left: 0px;
    color: white;
    width: 100%;
    z-index: 50;

}
.header-top {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    font-weight: bold;
    background-color: darkblue;
    z-index: 100;
    height: 40px;
}
.header-top>div {
    margin-right: 30px;
}
.Header span {
    margin-right: 20px;
}
.login-button {
    height: 25px;
    margin-right: 20px;
    font-size: 16px;
    align-items: center;
    line-height: 1.15;
    padding: 0px 15px;
    margin-right: 20px;
    border-radius: 3px;
}
.login-button:hover {
    color: darkblue;
    cursor: pointer;
}
.header-top>div>input {
    margin-right: 20px;
    height: 25px;
    font-size: 16px;
}
.Header .title {
    margin-right: auto;
    /* margin-left: 30px; */
    font-size: 40px;
    font-weight: 900;
}
.Header .title a {
    color: white
}
.menu-toggle {
    margin-left: 30px;
    cursor: pointer;
}
.menu-toggle>div {
    width: 25px;
    height: 2px;
    background-color: white;
    margin: 6px 0;
}




.menu-enter {
    top: -40px;
    width: 100%;
    z-index: 75;
    position: relative;
}
.menu-enter.menu-enter-active {
    top: 0px;
    transition: top 200ms;
    z-index: 75;
}
.menu-leave {
    top: 0px;
    width: 100%;
    z-index: 75;
    position: relative;
}
.menu-leave.menu-leave-active {
    top: -40px;
    transition: top 200ms;
    z-index: 75;
}

